--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "geolib": "^3.3.4",
     "lodash": "^4.17.21",
     "nerdamer": "^1.1.13",
+    "polygon-intersection": "^2.0.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
